--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
     applicationId "com.sazib.composedemo"
     minSdk 24
     targetSdk 33
-    versionCode 1
-    versionName "1.0"
+    versionCode 100
+    versionName "1.0.0"
 
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     vectorDrawables {
@@ -50,27 +50,32 @@ dependencies {
   implementation 'androidx.core:core-ktx:1.9.0'
 
   implementation "androidx.compose.ui:ui:$compose_version"
-  implementation "androidx.compose.foundation:foundation:$compose_version"
   implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
   implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
-  implementation "androidx.compose.material:material:$compose_version"
-  implementation "androidx.compose.material:material-icons-core:$compose_version"
-  implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
-  implementation "androidx.compose.material:material:$compose_version"
+  def material_compose = "1.3.1"
+  implementation "androidx.compose.material:material:$material_compose"
+  implementation "androidx.compose.material:material-icons-extended:$material_compose"
+  implementation "androidx.compose.material:material-icons-core:$material_compose"
+  implementation "androidx.compose.material:material:$material_compose"
+  implementation "androidx.compose.foundation:foundation:$material_compose"
+
   implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
   implementation 'androidx.activity:activity-compose:1.6.1'
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-  def app_compat = "1.5.1"
+  def app_compat = "1.6.0"
   implementation "androidx.appcompat:appcompat:$app_compat"
 
-  def material = "1.7.0"
+  def material = "1.8.0"
   implementation "com.google.android.material:material:$material"
 
   def constraint_layout = "2.1.4"
   implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
+
+  //splash
+  implementation 'androidx.core:core-splashscreen:1.0.0'
 
   def androidx_ui = "1.0.0-alpha07"
   implementation "androidx.ui:ui-tooling:$androidx_ui"
