--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
       android:supportsRtl="true"
       android:theme="@style/Theme.ComposeDemo">
     <activity
-        android:name=".MainActivity"
+        android:name=".ui.theme.login.LoginActivity"
         android:exported="true"
-        android:theme="@style/Theme.ComposeDemo">
+        android:theme="@style/Theme.App.Starting">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
