--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+  //font
+  implementation "androidx.compose.ui:ui-text-google-fonts:1.3.3"
+
   def app_compat = "1.6.0"
   implementation "androidx.appcompat:appcompat:$app_compat"
 
