--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jan 30 12:22:55 BDT 2023
-sdk.dir=C\:\\Users\\syed.elahee\\AppData\\Local\\Android\\Sdk
+#Tue Jan 31 17:25:30 BDT 2023
+sdk.dir=C\:\\Users\\saiful.sazib\\AppData\\Local\\Android\\Sdk
