--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,18 @@ dependencies {
   //splash
   implementation 'androidx.core:core-splashscreen:1.0.0'
 
+  //Ktor dependencies
+  def kt_version = '1.6.4'
+  implementation "io.ktor:ktor-client-core:$kt_version"
+  // HTTP engine: The HTTP client used to perform network requests.
+  implementation "io.ktor:ktor-client-android:$kt_version"
+  // The serialization engine used to convert objects to and from JSON.
+  implementation "io.ktor:ktor-client-serialization:$kt_version"
+  // Logging
+  implementation "io.ktor:ktor-client-logging:$kt_version"
+  def serialization_version = '1.3.0'
+  implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
+
   def androidx_ui = "1.0.0-alpha07"
   implementation "androidx.ui:ui-tooling:$androidx_ui"
 
