--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-  compileSdk 33
+  compileSdk 34
 
   defaultConfig {
     applicationId "com.sazib.composedemo"
     minSdk 24
-    targetSdk 33
+    targetSdk 34
     versionCode 100
     versionName "1.0.0"
 
@@ -43,25 +43,26 @@ android {
       excludes += '/META-INF/{AL2.0,LGPL2.1}'
     }
   }
+  namespace 'com.sazib.composedemo'
 }
 
 dependencies {
 
-  implementation 'androidx.core:core-ktx:1.9.0'
+  implementation 'androidx.core:core-ktx:1.12.0'
 
   implementation "androidx.compose.ui:ui:$compose_version"
   implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
   implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
 
-  def material_compose = "1.3.1"
+  def material_compose = "1.5.4"
   implementation "androidx.compose.material:material:$material_compose"
   implementation "androidx.compose.material:material-icons-extended:$material_compose"
   implementation "androidx.compose.material:material-icons-core:$material_compose"
   implementation "androidx.compose.material:material:$material_compose"
   implementation "androidx.compose.foundation:foundation:$material_compose"
 
-  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-  implementation 'androidx.activity:activity-compose:1.6.1'
+  implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+  implementation 'androidx.activity:activity-compose:1.8.2'
 
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
@@ -69,19 +70,19 @@ dependencies {
   implementation "com.google.accompanist:accompanist-pager:0.22.0-rc"
 
   //font
-  implementation "androidx.compose.ui:ui-text-google-fonts:1.3.3"
+  implementation "androidx.compose.ui:ui-text-google-fonts:1.5.4"
 
-  def app_compat = "1.6.0"
+  def app_compat = "1.6.1"
   implementation "androidx.appcompat:appcompat:$app_compat"
 
-  def material = "1.8.0"
+  def material = "1.10.0"
   implementation "com.google.android.material:material:$material"
 
   def constraint_layout = "2.1.4"
   implementation "androidx.constraintlayout:constraintlayout:$constraint_layout"
 
   //splash
-  implementation 'androidx.core:core-splashscreen:1.0.0'
+  implementation 'androidx.core:core-splashscreen:1.0.1'
 
   //Ktor dependencies
   def kt_version = '1.6.4'
